@@ -1,3 +1,8 @@
+2003-01-18  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/network_support.c (init_all_network_interfaces): Define buf
+	as const.
+
 2003-01-10  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/network_support.c (init_all_network_interfaces): Added
